--- a/src/styles/Notebook.css
+++ b/src/styles/Notebook.css
@@ -219,12 +219,16 @@
   font-family: 'Comic Sans MS', 'Chalkboard SE', 'Marker Felt', sans-serif;
   font-weight: 600;
   border: 2px dashed white;
+  height: 36px;
 }
 
 .run-button .button-icon {
   width: 16px;
   height: 16px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .run-button .button-icon::before {
@@ -256,8 +260,14 @@
   border: none;
   animation: none;
   transform: translate(-50%, -50%);
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .cell:hover .run-button {
